adding GOAT network
